main/core/Tests/Stub/plugin/Invalid/NonExistentConfigFile1/InvalidNonExistentConfigFile1.php
<?php

/*
 * This file is part of the Claroline Connect package.
 *
 * (c) Claroline Consortium <consortium@claroline.net>
 *
 * For the full copyright and license information, please view the LICENSE
 * file that was distributed with this source code.
 */

namespace Invalid\NonExistentConfigFile1;

use Claroline\CoreBundle\Library\DistributionPluginBundle;

class InvalidNonExistentConfigFile1 extends DistributionPluginBundle
{
}
